--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        img{
+            height: 5rem;
+            aspect-ratio: 1;
+            object-fit: contain;
+        }
+    </style>
 </head>
 <body>
     <div>
@@ -27,6 +34,23 @@
         <a href="thumbnails/2.png">
             <img src="thumbnails/2.png">
         </a>
+    </div>
+    <div>
+        <div>
+            <a href="productsThumbnails/0/0.png">
+                <img src="productsThumbnails/0/0.png">
+            </a>
+        </div>
+        <div>
+            <a href="productsThumbnails/1/0.png">
+                <img src="productsThumbnails/1/0.png">
+            </a>
+        </div>
+        <div>
+            <a href="productsThumbnails/2/0.png">
+                <img src="productsThumbnails/2/0.png">
+            </a>
+        </div>
     </div>
 </body>
 </html>
