--- a/index.html
+++ b/index.html
@@ -51,6 +51,51 @@
                 <img src="productsThumbnails/2/0.png">
             </a>
         </div>
+        <div>
+            <a href="productsThumbnails/3/0.png">
+                <img src="productsThumbnails/3/0.png">
+            </a>
+        </div>
+        <div>
+            <a href="productsThumbnails/4/0.jpg">
+                <img src="productsThumbnails/4/0.jpg">
+            </a>
+        </div>
+        <div>
+            <a href="productsThumbnails/5/0.jpg">
+                <img src="productsThumbnails/5/0.jpg">
+            </a>
+        </div>
+        <div>
+            <a href="productsThumbnails/6/0.jpg">
+                <img src="productsThumbnails/6/0.jpg">
+            </a>
+        </div>
+        <div>
+            <a href="productsThumbnails/7/0.jpg">
+                <img src="productsThumbnails/7/0.jpg">
+            </a>
+        </div>
+        <div>
+            <a href="productsThumbnails/8/0.jpg">
+                <img src="productsThumbnails/8/0.jpg">
+            </a>
+        </div>
+        <div>
+            <a href="productsThumbnails/9/0.jpg">
+                <img src="productsThumbnails/9/0.jpg">
+            </a>
+        </div>
+        <div>
+            <a href="productsThumbnails/10/0.jpg">
+                <img src="productsThumbnails/10/0.jpg">
+            </a>
+        </div>
+        <div>
+            <a href="productsThumbnails/11/0.png">
+                <img src="productsThumbnails/11/0.png">
+            </a>
+        </div>
     </div>
 </body>
 </html>
