--- a/index.html
+++ b/index.html
@@ -96,6 +96,21 @@
                 <img src="productsThumbnails/11/0.png">
             </a>
         </div>
+        <div>
+            <a href="productsThumbnails/12/0.png">
+                <img src="productsThumbnails/12/0.png">
+            </a>
+        </div>
+        <div>
+            <a href="productsThumbnails/13/0.png">
+                <img src="productsThumbnails/13/0.png">
+            </a>
+        </div>
+        <div>
+            <a href="productsThumbnails/14/0.png">
+                <img src="productsThumbnails/14/0.png">
+            </a>
+        </div>
     </div>
 </body>
 </html>
